# Sprinkler

./: .gitignore  .gitmodules  CMakeLists.txt  Sprinkler.jucer  readme.md
JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: Diffuser.h  FrequencyDelay.cpp  FrequencyDelay.h  Sprinkler.cpp  Sprinkler.h
Source/UI/: LF.cpp  LF.h
